crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/027.cypher
MATCH (n)-[r]->(m) RETURN n; MATCH (admin:Admin) RETURN admin
